--- a/Class/super.html
+++ b/Class/super.html
@@ -17,6 +17,8 @@
 
     console.log(B.__proto__ === A );
     console.log(B.prototype.__proto__ === A.prototype);
+	
+	var test = "testgit";
 
 
 </script>
