--- a/Array/filter().html
+++ b/Array/filter().html
@@ -9,6 +9,9 @@
 
     /*
      Array.prototype.filter = function(callback,thisArg) {};
+
+     - filter()
+        筛选出一个满足条件的数组
      */
 
     function isBigEnough(value) {
